--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include 'core'
 include 'api'
 include 'user'
 include 'survey'
+include 'api:acceptance-test'
+findProject(':api:acceptance-test')?.name = 'acceptance-test'
 
