--- a/api/acceptance-test/build.gradle
+++ b/api/acceptance-test/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.11'
+    id 'org.springframework.boot' version '2.7.11' apply false
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'jacoco-report-aggregation'
 }
@@ -12,10 +12,15 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation project(':api:acceptance-test')
+dependencyManagement {
+    imports {
+        mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+    }
+}
 
-    implementation 'org.springframework.boot:spring-boot-starter'
+dependencies {
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
