--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,52 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'jacoco'
+
+	repositories {
+		mavenCentral()
+	}
+
+	jacoco {
+		toolVersion = '0.8.9'
+	}
+
+	test {
+		useJUnitPlatform()
+		finalizedBy 'jacocoTestReport'
+	}
+
+	jacocoTestReport {
+		reports {
+			html.required = true
+			csv.required = true
+			xml.required = true
+		}
+		finalizedBy 'jacocoTestCoverageVerification'
+	}
+
+	jacocoTestCoverageVerification {
+		violationRules {
+			rule {
+				limit {
+					minimum = 0.70
+				}
+			}
+
+			rule {
+				enabled = true
+				element = 'CLASS'
+
+				limit {
+					counter = 'LINE'
+					value = 'COVEREDRATIO'
+					minimum = 0.70
+				}
+			}
+		}
+	}
+
+}
