--- a/.github/workflows/sonarcloud-analyze.yml
+++ b/.github/workflows/sonarcloud-analyze.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 11
       - name: Cache Gradle packages
         uses: actions/cache@v3
