create support / core.data module

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,7 @@ include 'user'
 include 'survey'
 include 'api:acceptance-test'
 findProject(':api:acceptance-test')?.name = 'acceptance-test'
+include 'support'
+include 'core:data'
+findProject(':core:data')?.name = 'data'
 
