--- a/.github/workflows/jacoco-reports.yml
+++ b/.github/workflows/jacoco-reports.yml
@@ -1,4 +1,4 @@
-name: Jacoco reports
+name: Jacoco assured
 
 on:
   pull_request:
@@ -29,3 +29,8 @@ jobs:
           minimum_coverage: 70
           fail_below_threshold: true
           publish_only_summary: false
+          
+      - name: Add Coverage Job Summary
+        run: echo "${{ steps.jacoco_reporter.outputs.coverageSummary }}" >> $GITHUB_STEP_SUMMARY
+        
+      
