update jacoco config and build info

--- a/support/jacoco/build.gradle
+++ b/support/jacoco/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java'
+    id 'jacoco-report-aggregation'
     id 'org.springframework.boot' version '2.7.11' apply false
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'me.nalab'
-version = '0.0.1-SNAPSHOT'
+group 'me.nalab'
+version '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -18,13 +19,10 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation project(':api')
+    implementation project(':api:acceptance-test')
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter'
-
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
