--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
+import java.util.stream.Collectors
+
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.7.11'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id "org.sonarqube" version "4.0.0.2929"
 }
 
@@ -13,14 +13,7 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
+dependencies {}
 
 sonar {
 	properties {
@@ -29,6 +22,8 @@ sonar {
 		property 'sonar.projectKey', 'depromeet_na-lab-server'
 	}
 }
+
+var excludeFromCoverage = List.of('me/nalab/api/NalabApplication')
 
 subprojects {
 	apply plugin: 'java'
@@ -54,19 +49,26 @@ subprojects {
 			xml.required = true
 		}
 		finalizedBy 'jacocoTestCoverageVerification'
+		dependsOn test
+
+		afterEvaluate {
+			classDirectories.setFrom(files(classDirectories.files.collect {
+				fileTree(dir: it, exclude: excludeFromCoverage.stream()
+						.map(s -> new String(s + ".class"))
+						.collect(Collectors.toList()))
+			}))
+		}
 	}
 
 	jacocoTestCoverageVerification {
 		violationRules {
-			rule {
-				limit {
-					minimum = 0.70
-				}
-			}
 
 			rule {
 				enabled = true
 				element = 'CLASS'
+				excludes += excludeFromCoverage.stream()
+								.map(s -> new String(s.replace("/", ".")))
+								.collect(Collectors.toList())
 
 				limit {
 					counter = 'LINE'
@@ -74,6 +76,29 @@ subprojects {
 					minimum = 0.70
 				}
 			}
+
 		}
+	}
+
+}
+
+var allProjects = getAllprojects().stream()
+		.filter(p -> !p.getDisplayName().contains('root project'))
+		.map(p -> p)
+		.collect(Collectors.toList())
+
+project(':support:jacoco'){
+	apply plugin: 'jacoco-report-aggregation'
+
+	testCodeCoverageReport {
+		getClassDirectories().setFrom(files(
+				allProjects
+						.collect {
+							it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude:
+									excludeFromCoverage.stream()
+											.map(s -> new String(s + ".class"))
+											.collect(Collectors.toList()))
+						})
+		)
 	}
 }
