--- a/api/build.gradle
+++ b/api/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(':api:acceptance-test')
+
     implementation 'org.springframework.boot:spring-boot-starter'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
