--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.util.stream.Collectors
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.11'
@@ -9,18 +11,20 @@ group = 'me.nalab'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+var excludeFromCoverage = new ArrayList<String>()
+file('coverage-exclude.luffy').withInputStream(){
+	it -> excludeFromCoverage.addAll(new BufferedReader(new InputStreamReader(it))
+			.lines()
+			.parallel()
+			.map(s -> s.substring(7).strip())
+			.collect(Collectors.toList()))
+}
+
 repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
+dependencies {}
 
 sonar {
 	properties {
@@ -54,19 +58,26 @@ subprojects {
 			xml.required = true
 		}
 		finalizedBy 'jacocoTestCoverageVerification'
+		dependsOn test
+
+		afterEvaluate {
+			classDirectories.setFrom(files(classDirectories.files.collect {
+				fileTree(dir: it, exclude: excludeFromCoverage.stream()
+						.map(s -> s + ".class")
+						.collect(Collectors.toList()))
+			}))
+		}
 	}
 
 	jacocoTestCoverageVerification {
 		violationRules {
-			rule {
-				limit {
-					minimum = 0.70
-				}
-			}
 
 			rule {
 				enabled = true
 				element = 'CLASS'
+				excludes += excludeFromCoverage.stream()
+								.map(s -> s.replace("/", "."))
+								.collect(Collectors.toList())
 
 				limit {
 					counter = 'LINE'
@@ -74,6 +85,29 @@ subprojects {
 					minimum = 0.70
 				}
 			}
+
 		}
+	}
+
+}
+
+var allProjects = getAllprojects().stream()
+		.filter(p -> !p.getDisplayName().contains('root project'))
+		.map(p -> p)
+		.collect(Collectors.toList())
+
+project(':support:jacoco'){
+	apply plugin: 'jacoco-report-aggregation'
+
+	testCodeCoverageReport {
+		getClassDirectories().setFrom(files(
+				allProjects
+						.collect {
+							it.fileTree(dir: "${it.buildDir}/classes/java/main", exclude:
+									excludeFromCoverage.stream()
+											.map(s -> s + ".class")
+											.collect(Collectors.toList()))
+						})
+		)
 	}
 }
