add jacoco rule - branch 70%

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,13 @@ subprojects {
 					value = 'COVEREDRATIO'
 					minimum = 0.70
 				}
+
+				limit {
+					counter = 'BRANCH'
+					value = 'COVEREDRATIO'
+					minimum = 0.70
+				}
+
 			}
 
 		}
