chore api <--dependency-- acceptance-test

--- a/api/acceptance-test/build.gradle
+++ b/api/acceptance-test/build.gradle
@@ -18,6 +18,7 @@ dependencyManagement {
 }
 
 dependencies {
+    implementation project(':api')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter'
