--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
 rootProject.name = 'luffy'
 include 'core'
 include 'api'
-include 'user'
 include 'survey'
 include 'api:acceptance-test'
 findProject(':api:acceptance-test')?.name = 'acceptance-test'
@@ -10,4 +9,5 @@ include 'core:data'
 findProject(':core:data')?.name = 'data'
 include 'support:jacoco'
 findProject(':support:jacoco')?.name = 'jacoco'
+include 'auth'
 
