--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,15 @@
 rootProject.name = 'luffy'
+
 include 'core'
-include 'api'
-include 'user'
-include 'survey'
-include 'api:acceptance-test'
-findProject(':api:acceptance-test')?.name = 'acceptance-test'
-include 'support'
 include 'core:data'
-findProject(':core:data')?.name = 'data'
+
+include 'api'
+include 'api:acceptance-test'
+
+include 'support'
 include 'support:jacoco'
-findProject(':support:jacoco')?.name = 'jacoco'
+
+include 'survey'
+
+include 'auth'
 
