--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,12 @@
+pluginManagement {
+    plugins {
+        id 'org.springframework.boot' version "${springBootVersion}"
+        id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
+        id 'jacoco'
+        id 'org.sonarqube' version "${sonarVersion}"
+    }
+}
+
 rootProject.name = 'luffy'
 
 include 'core'
