--- a/gradle/sonar.gradle
+++ b/gradle/sonar.gradle
@@ -1,7 +1,7 @@
 sonar {
     properties {
-        property 'sonar.host.url', '${sonarHostUrl}'
-        property 'sonar.organization', '${sonarOrganization}'
-        property 'sonar.projectKey', '${sonarProjectKey}'
+        property 'sonar.host.url', 'https://sonarcloud.io'
+        property 'sonar.organization', 'depromeet-1'
+        property 'sonar.projectKey', 'depromeet_na-lab-server'
     }
 }
