--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'java'
+	id 'java-library'
 	id 'org.springframework.boot' apply false
 	id 'io.spring.dependency-management'
 	id 'org.sonarqube'
