--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -10,7 +10,7 @@ file('coverage-exclude.luffy').withInputStream(){
 }
 
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'jacoco'
 
     repositories {
