--- a/gradle/spring.gradle
+++ b/gradle/spring.gradle
@@ -1,5 +1,5 @@
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
