--- a/settings.gradle
+++ b/settings.gradle
@@ -27,4 +27,6 @@ include 'core:id-generator'
 include 'core:id-generator:id-core'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
+include 'survey:application'
+findProject(':survey:application')?.name = 'application'
 
