[test] : SurveyCreateRequestTest 생성 테스트 작성

--- a/survey/application/build.gradle
+++ b/survey/application/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
     implementation project(':survey:domain')
+    testImplementation project(':survey:domain')
+
     implementation project(':core:id-generator:id-generator-starter')
 }
