--- a/survey/application/build.gradle
+++ b/survey/application/build.gradle
@@ -3,4 +3,6 @@ dependencies {
     testImplementation project(':survey:domain')
 
     implementation project(':core:id-generator:id-generator-starter')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
