--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'javax.persistence:javax.persistence-api:2.2'
 }
