[feat] : 인수테스트용 인증 테스트더블 모듈 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'support:jacoco'
 include 'survey'
 
 include 'auth'
+include 'auth:mock'
 
 include 'core:id-generator'
 include 'core:id-generator:id-core'
