--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -9,7 +9,7 @@ file('coverage-exclude.luffy').withInputStream(){
             .collect(Collectors.toList()))
 }
 
-subprojects {
+allprojects {
     apply plugin: 'java-library'
     apply plugin: 'jacoco'
 
