--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'javax.persistence:javax.persistence-api:2.2'
 }
