[fix] : jacoco method단위 테스트 커버리지 제거 기능 추가 및 제거

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ rootProject.name = 'luffy'
 
 include 'core'
 include 'core:data'
+include 'core:meta'
 
 include 'api'
 include 'api:acceptance-test'
