[feat] : `auth` 테스트 더블 `auth:mock` 모듈 (#30)
Co-authored-by: devxb <devxb@naver.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include 'survey'
 include 'survey:domain'
 
 include 'auth'
+include 'auth:mock'
 
 include 'core:id-generator'
 include 'core:id-generator:id-core'
