--- a/settings.gradle
+++ b/settings.gradle
@@ -29,4 +29,6 @@ include 'core:id-generator'
 include 'core:id-generator:id-core'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
+include 'survey:web-adaptor'
+findProject(':survey:web-adaptor')?.name = 'web-adaptor'
 
