--- a/survey/web-adaptor/build.gradle
+++ b/survey/web-adaptor/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':survey:application')
     testImplementation project(':survey:application')
 
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
