--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include 'survey'
 include 'survey:domain'
 include 'survey:application'
 include 'survey:web-adaptor'
+include 'survey:jpa-adaptor'
 
 include 'auth'
 include 'auth:mock'
@@ -30,3 +31,4 @@ include 'core:id-generator'
 include 'core:id-generator:id-core'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
+
