[feat] : Survey create jpa-adaptor

--- a/survey/jpa-adaptor/build.gradle
+++ b/survey/jpa-adaptor/build.gradle
@@ -4,4 +4,6 @@ dependencies {
     implementation project(':core:data')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    testImplementation 'com.h2database:h2:2.1.214'
 }
