[fix] : ci-strategy

--- a/.github/workflows/unit-analyze.yml
+++ b/.github/workflows/unit-analyze.yml
@@ -1,15 +1,13 @@
-name: sonarcloud-analyze
+name: unit-test-analyze-with-sonarcloud
 on:
   # Trigger analysis when pushing in master or pull requests, and when creating
   # a pull request.
   push:
     branches:
-      - main
+      - **/dev/**
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+    branches:
+      - **/dev/**
 
 jobs:
   build:
@@ -38,7 +36,7 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Build and analyze
-        run: ./gradlew test jacocoTestReport testCodeCoverageReport sonar --info
+        run: ./gradlew clean test --exclude-task api:acceptance-test:test jacocoTestReport testCodeCoverageReport sonar --info
         env:
           # Needed to get some information about the pull request, if any
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
