--- a/.github/workflows/build-assure.yml
+++ b/.github/workflows/build-assure.yml
@@ -5,10 +5,8 @@ on:
     branches:
       - main
   pull_request:
-    types:
-      - opened
-      - synchronize
-      - reopened
+    branches:
+      - main
 
 jobs:
   gradle:
