[fix] : build-assure 안돌아가게 수정

--- a/.github/workflows/build-assure.yml
+++ b/.github/workflows/build-assure.yml
@@ -1,12 +1,12 @@
 name: Run Gradle on PRs
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+#on:
+#  push:
+#    branches:
+#      - main
+#  pull_request:
+#    branches:
+#      - main
 
 jobs:
   gradle:
