--- a/.github/workflows/build-assure.yml
+++ b/.github/workflows/build-assure.yml
@@ -1,5 +1,5 @@
-name: Run Gradle on PRs
-
+#name: Run Gradle on PRs
+#
 #on:
 #  push:
 #    branches:
@@ -7,22 +7,22 @@ name: Run Gradle on PRs
 #  pull_request:
 #    branches:
 #      - main
-
-jobs:
-  gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: 11
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Execute Gradle build
-        run: ./gradlew clean build
+#
+#jobs:
+#  gradle:
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest, macos-latest]
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/setup-java@v3
+#        with:
+#          distribution: 'zulu'
+#          java-version: 11
+#
+#      - name: Setup Gradle
+#        uses: gradle/gradle-build-action@v2
+#
+#      - name: Execute Gradle build
+#        run: ./gradlew clean build
