--- a/.github/workflows/squash-merge-labeler.yml
+++ b/.github/workflows/squash-merge-labeler.yml
@@ -1,17 +1,31 @@
-name: PR Branch Labeler
+# .github/workflows/pr-labeler.yml
 
-on: pull_request
+name: Squash labeler
 
+on:
+  pull_request:
+    branches:
+      - '**/dev/**'
+    
 jobs:
-  label_prs:
+  labeler:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
-      - name: Label PRs
-        if: github.event.action == 'opened' # Only run the action when the PR was first opened
-        uses: ffittschen/pr-branch-labeler@v1
+      - name: Check Labels
+        id: labeler
+        uses: jimschubert/labeler-action@v1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          🚀 squash merge:
-            base: "*/dev/*"
-          🚀 rebase merge:
-            head: "main"
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          
+enable:
+  issues: false
+  prs: true
+
+# 레이블
+labels:
+  'sqaush merge':
+    include:
+      - '\b\b'
