--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Label PRs
-        if: github.event.action == 'opened' # Only run the action when the PR was first opened
+#         if: github.event.action == 'opened' # Only run the action when the PR was first opened
         uses: ffittschen/pr-branch-labeler@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
