--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -5,6 +5,9 @@ on: pull_request
 jobs:
   label_prs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Label PRs
 #         if: github.event.action == 'opened' # Only run the action when the PR was first opened
