--- a/.github/workflows/unit-analyze.yml
+++ b/.github/workflows/unit-analyze.yml
@@ -2,7 +2,7 @@ name: unit-test-analyze-with-sonarcloud
 on:
   pull_request:
     branches:
-      - **/dev/**
+      - '**/base-**'
 
 jobs:
   build:
