--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -1,13 +1,18 @@
-name: Type labeler
+name: PR Labeler
 on:
   pull_request:
 
+permissions:
+  contents: read
+
 jobs:
-  labeler:
+  pr-labeler:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - name: Check Labels
-        id: labeler
-        uses: jimschubert/labeler-action@v2
+      - uses: TimonVS/pr-labeler-action@v4
         with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          configuration-path: .github/labeler.yml
