[fix] ci and pr-labeler.yml

--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -4,6 +4,7 @@ on:
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   pr-labeler:
@@ -15,4 +16,4 @@ jobs:
       - uses: TimonVS/pr-labeler-action@v4
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          configuration-path: .github/labeler.yml
+          configuration-path: .github/pr-labeler.yml
