--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -1,7 +1,7 @@
 name: PR Labeler
 on:
   pull_request_target:
-    types: [opened]
+    types: [opened, edited, reopened]
 
 permissions:
   contents: read
