--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -1,11 +1,10 @@
 name: PR Labeler
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, edited, reopened]
 
 permissions:
   contents: read
-  pull-requests: write
 
 jobs:
   pr-labeler:
