--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,8 +1,8 @@
-✨feature: '*feat]*'
-🐛bug-fix: '*fix]*'
-♻️refactor: '*refactor]*'
-🎨style: '*style]*'
-➕chore: '*chore]*'
-✅test: '*test]*'
-📝docs: '*docs]*'
+✨feature: '\[feat\]*'
+🐛bug-fix: '\[fix\]*'
+♻️refactor: '\[refactor\]*'
+🎨style: '\[style\]*'
+➕chore: '\[chore\]*'
+✅test: '\[test\]*'
+📝docs: '\[docs\]*'
 
