--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -1,4 +1,4 @@
-✨feature: '[feat] : pr 이름기반 type label 자동화 기능 추가'
+✨feature: '[feat] : pr 이름기반 type label 자동화 기능 추가 #73'
 🐛bug-fix: 'fix*'
 ♻️refactor: 'refactor*'
 🎨style: 'style*'
