[fix] : feedback 생성 예외 잡지 못하는 버그 수정

--- a/survey/web-adaptor/build.gradle
+++ b/survey/web-adaptor/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    implementation project(':survey:domain')
     implementation project(':survey:application')
     testImplementation project(':survey:application')
 
