Create user entity

--- a/settings.gradle
+++ b/settings.gradle
@@ -32,3 +32,6 @@ include 'core:id-generator:id-core'
 include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
 
+include 'user'
+include 'user:domain'
+
