userentity 정의 및 domain 연결

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,4 +34,6 @@ include 'core:id-generator:id-generator-starter'
 
 include 'user'
 include 'user:domain'
+include 'user:jpa-adapter'
+include 'user:application'
 
