--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,5 @@ include 'core:id-generator:mock-id-generator'
 include 'core:id-generator:id-generator-starter'
 
 include 'core:exception-handler'
+
+include 'core:time'
