반환 값 수정 및 assert 제거 및 validated 추가

--- a/user/application/build.gradle
+++ b/user/application/build.gradle
@@ -2,5 +2,7 @@ dependencies {
     implementation project(':user:domain')
     testImplementation project(':user:domain')
 
+    implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
