[fix] : sonar cloud에서 exclude 안되는 문제

--- a/gradle/sonar.gradle
+++ b/gradle/sonar.gradle
@@ -1,20 +1,19 @@
 import java.util.stream.Collectors
 
-var excludeFromCoverage = new ArrayList<String>()
+StringBuilder excludeBuilder = new StringBuilder()
 file('coverage-exclude.luffy').withInputStream(){
-    it -> excludeFromCoverage.addAll(new BufferedReader(new InputStreamReader(it))
+    it -> new BufferedReader(new InputStreamReader(it))
             .lines()
             .parallel()
-            .map(s -> "**/" + s.substring(7).strip() + ".java")
-            .collect(Collectors.toList()))
+            .map(s -> '**/' + s.substring(7).strip() + '.java')
+            .forEach(s -> excludeBuilder.append('\'').append(s).append('\','))
 }
-
 
 sonar {
     properties {
         property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.organization', 'depromeet-1'
         property 'sonar.projectKey', 'depromeet_na-lab-server'
-        property 'sonar.coverage.exclusions', excludeFromCoverage.toArray()
+        property 'sonar.coverage.exclusions', "\"" + excludeBuilder.toString() + "\""
     }
 }
