--- a/gradle/sonar.gradle
+++ b/gradle/sonar.gradle
@@ -14,6 +14,6 @@ sonar {
         property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.organization', 'depromeet-1'
         property 'sonar.projectKey', 'depromeet_na-lab-server'
-        property 'sonar.coverage.exclusions', "\"" + excludeBuilder.toString() + "\""
+        property 'sonar.exclusions', "\"" + excludeBuilder.toString() + "\""
     }
 }
