--- a/api/build.gradle
+++ b/api/build.gradle
@@ -9,5 +9,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'com.h2database:h2:2.1.214'
+
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.flywaydb:flyway-core:9.16.0'
+    implementation 'org.flywaydb:flyway-mysql:9.16.0'
 }
