--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.driver-class-name = org.h2.Driver
-spring.datasource.url = jdbc:h2:mem:test
-
-spring.jpa.hibernated.ddl-auto = create-drop
-spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.maximum-pool-size = 4
-spring.datasource.hikari.pool-name = H2_TEST_POOL
+spring.datasource.hikari.pool-name = HIKARI_CONNECTION_POOL
+
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
+
+### FLYWAY ###
+spring.flyway.enabled = true
+spring.flyway.baseline-on-migrate = true
