--- a/.github/workflows/docker-publisher.yml
+++ b/.github/workflows/docker-publisher.yml
@@ -1,12 +1,9 @@
 name: Docker image publisher
 
 on:
-  push:
+  release:
     tags:
       - 'v*'
-  pull_request: # 테스트용
-    branches:
-      - main
 
 jobs:
   docker:
