[fix] : CI 시점 새로운 release 등록시점으로 변경

--- a/.github/workflows/docker-publisher.yml
+++ b/.github/workflows/docker-publisher.yml
@@ -2,9 +2,9 @@ name: Docker image publisher
 
 on:
   release:
-    tags:
-      - 'v*'
-
+    types: 
+      - published
+    
 jobs:
   docker:
     name: Push Docker image to Docker Hub
