[fix] : CI 시점 release에 push로 변경

--- a/.github/workflows/docker-publisher.yml
+++ b/.github/workflows/docker-publisher.yml
@@ -1,9 +1,9 @@
 name: Docker image publisher
 
 on:
-  release:
-    types: 
-      - published
+  push:
+    branches: 
+      - release
     
 jobs:
   docker:
