--- a/settings.gradle
+++ b/settings.gradle
@@ -38,4 +38,7 @@ include 'user'
 include 'user:domain'
 include 'user:jpa-adapter'
 include 'user:application'
+include 'auth:auth-application'
+findProject(':auth:auth-application')?.name = 'auth-application'
+include 'client'
 
