--- a/.github/workflows/start-api-server.yml
+++ b/.github/workflows/start-api-server.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             docker pull samillmu/luffy:latest
             docker ps -aq | xargs docker stop | xargs docker rm
