--- a/.github/workflows/start-api-server.yml
+++ b/.github/workflows/start-api-server.yml
@@ -23,4 +23,4 @@ jobs:
           script: |
             docker pull samillmu/luffy:latest
             docker ps -aq | xargs docker stop | xargs docker rm
-            docker run -p 8080:8080 samillmu/luffy:latest
+            docker run -d -p 8080:8080 samillmu/luffy:latest
