--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'core:data'
 
 include 'api'
 include 'api:acceptance-test'
+include 'api:api-mock'
 
 include 'support'
 include 'support:jacoco'
@@ -37,3 +38,4 @@ include 'core:exception-handler'
 
 include 'core:time'
 include 'core:secure'
+
