--- a/user/application/build.gradle
+++ b/user/application/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation project(path: ':core:id-generator:mock-id-generator')
 }
