--- a/user/application/build.gradle
+++ b/user/application/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation project(':user:domain')
-    implementation project(':core:id-generator:id-core')
+    implementation project(':core:id-generator:id-generator-starter')
     testImplementation project(':user:domain')
 
     implementation 'javax.validation:validation-api:2.0.1.Final'
