--- a/user/application/build.gradle
+++ b/user/application/build.gradle
@@ -1,8 +1,10 @@
 dependencies {
     implementation project(':user:domain')
+    implementation project(':core:id-generator:id-generator-starter')
     testImplementation project(':user:domain')
 
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation project(path: ':core:id-generator:mock-id-generator')
 }
