[chore] : issues에도 자동 라벨링 부착되도록 수정

--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -2,6 +2,7 @@ name: Type labeler
 
 on:
   pull_request:
+  issues:
 
 jobs:
   add_label:
@@ -15,7 +16,7 @@ jobs:
 
       - name: add ✨ feature label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[feat]') }}
+        if: ${{ startsWith(github.event.pull_request.title, '[feat]') || startsWith(github.event.issues.title, '[feat]')}}
         with:
           labels: ✨ feature
 
