--- a/.github/workflows/type-labeler.yml
+++ b/.github/workflows/type-labeler.yml
@@ -2,6 +2,7 @@ name: Type labeler
 
 on:
   pull_request:
+  issues:
 
 jobs:
   add_label:
@@ -15,43 +16,43 @@ jobs:
 
       - name: add ✨ feature label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[feat]') }}
+        if: ${{ startsWith(github.event.issues.title, '[feat]') || startsWith(github.event.pull_request.title, '[feat]') }}
         with:
           labels: ✨ feature
 
       - name: add 🐛 bug-fix label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[fix]') }}
+        if: ${{ startsWith(github.event.issues.title, '[fix]') || startsWith(github.event.pull_request.title, '[fix]') }}
         with:
           labels: 🐛 bug-fix
 
       - name: add ♻️ refactor label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[refactor]') }}
+        if: ${{ startsWith(github.event.issues.title, '[refactor]') || startsWith(github.event.pull_request.title, '[refactor]') }}
         with:
           labels: ♻️ refactor
           
       - name: add 🎨 style label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[style]') }}
+        if: ${{ startsWith(github.event.issues.title, '[style]') || startsWith(github.event.pull_request.title, '[style]') }}
         with:
           labels: 🎨 style
 
       - name: add 🍻 chore label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[chore]') }}
+        if: ${{ startsWith(github.event.issues.title, '[chore]') || startsWith(github.event.pull_request.title, '[chore]') }}
         with:
           labels: 🍻 chore
 
       - name: add ✅ test label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[test]') }}
+        if: ${{ startsWith(github.event.issues.title, '[test]') || startsWith(github.event.pull_request.title, '[test]') }}
         with:
           labels: ✅ test
 
       - name: add 📝 docs label
         uses: actions-ecosystem/action-add-labels@v1
-        if: ${{ startsWith(github.event.pull_request.title, '[docs]') }}
+        if: ${{ startsWith(github.event.issues.title, '[docs]') || startsWith(github.event.pull_request.title, '[docs]') }}
         with:
-          labels: 📝 docs
+          labels: 📝 docs 
           
