--- a/auth/auth-application/build.gradle
+++ b/auth/auth-application/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    implementation project(":user:domain")
-    implementation project(":user:application")
+    implementation project(":user:user-domain")
+    implementation project(":user:user-application")
 
     implementation 'com.auth0:java-jwt:4.4.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.5' // springboot 2.7.11 dependency-version
