--- a/user/user-application/build.gradle
+++ b/user/user-application/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    implementation project(':user:domain')
+    implementation project(':user:user-domain')
     implementation project(':core:id-generator:id-generator-starter')
-    testImplementation project(':user:domain')
+    testImplementation project(':user:user-domain')
 
     implementation 'javax.validation:validation-api:2.0.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
