--- a/user/user-jpa-adapter/build.gradle
+++ b/user/user-jpa-adapter/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    implementation project(':user:domain')
-    implementation project(':user:application')
+    implementation project(':user:user-domain')
+    implementation project(':user:user-application')
     implementation project(':core:data')
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
