[fix] : application.yml 못 읽어오는 버그 수정

--- a/auth/auth-application/src/main/resources/application.yml
+++ b/auth/auth-application/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     activate:
       on-profile: test
 jwt:
-  access-token-header:
+  access-token-header: "Authorization"
   issuer: "issuer"
   prefix: "prefix"
   secret: "secret"
