--- a/api/acceptance-test/build.gradle
+++ b/api/acceptance-test/build.gradle
@@ -1,11 +1,14 @@
 dependencies {
     testImplementation project(':auth:mock')
+    testImplementation project(':auth:auth-application')
     testImplementation project(':core:id-generator:id-generator-starter')
     testImplementation project(':core:data')
     testImplementation project(':survey:domain')
     testImplementation project(':survey:jpa-adaptor')
     testImplementation project(':survey:web-adaptor')
-    testImplementation project(':auth:auth-application')
+    testImplementation project(':user:user-domain')
+    testImplementation project(':user:user-jpa-adapter')
+    testImplementation project(':user:user-web-adaptor')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
