--- a/settings.gradle
+++ b/settings.gradle
@@ -45,3 +45,6 @@ include 'user:user-domain'
 include 'user:user-jpa-adapter'
 include 'user:user-application'
 include 'user:user-web-adaptor'
+include 'auth:auth-interceptor'
+findProject(':auth:auth-interceptor')?.name = 'auth-interceptor'
+
