[chore] : mock api 다시 추가

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    implementation project(':api:api-mock')
 
     implementation project(':survey:web-adaptor')
     implementation project(':survey:jpa-adaptor')
