--- a/user/user-application/build.gradle
+++ b/user/user-application/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     implementation project(':survey:domain')
     implementation project(':survey:application')
     implementation project(':core:id-generator:id-generator-starter')
+    implementation project(':core:time')
+
     testImplementation project(':user:user-domain')
 
     implementation 'javax.validation:validation-api:2.0.1.Final'
