--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,8 @@ include 'auth'
 include 'auth:mock'
 include 'auth:auth-application'
 include 'auth:auth-web-adaptor'
+include 'auth:auth-interceptor'
+include 'auth:oauth-application'
 
 include 'core:id-generator'
 include 'core:id-generator:id-core'
@@ -45,6 +47,4 @@ include 'user:user-domain'
 include 'user:user-jpa-adapter'
 include 'user:user-application'
 include 'user:user-web-adaptor'
-include 'auth:auth-interceptor'
-findProject(':auth:auth-interceptor')?.name = 'auth-interceptor'
 
