--- a/api/build.gradle
+++ b/api/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(':auth:auth-application')
     implementation project(':auth:auth-web-adaptor')
     implementation project(':auth:auth-interceptor')
+    implementation project(':auth:oauth-application')
 
     implementation project(':user:user-domain')
     implementation project(':user:user-application')
