[chore] : gradle 수행시간 최적화

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,9 @@ sonarVersion=4.0.0.2929
 
 ### Jacoco settings ###
 jacocoToolVersion=0.8.9
+
+### Gradle Parllel ###
+org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx2048m
