logging module 추가

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=logging.properties
+
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.maximum-pool-size = 4
