--- a/api/build.gradle
+++ b/api/build.gradle
@@ -17,10 +17,10 @@ dependencies {
     implementation project(':user:user-jpa-adapter')
     implementation project(':user:user-web-adaptor')
 
+    implementation project(":support:logging")
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    implementation 'io.sentry:sentry-spring-boot-starter:6.23.0'
 
     implementation 'mysql:mysql-connector-java:8.0.33'
     implementation 'org.flywaydb:flyway-core:9.16.0'
