[delete] : 테스트용 branches 주석 삭제

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,10 +2,10 @@ name: e2e test
 
 on:
   pull_request:
-#    branches:
-#      - main
-#      - stage
-#      - release
+    branches:
+      - main
+      - stage
+      - release
 
 jobs:
   build:
