--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,10 @@ org.gradle.jvmargs=-Xmx2048m
 
 ### Sentry ###
 sentryLogBackVersion=1.7.30
+
+### Kotlin ###
+kotlinVersion=1.9.22
+
+### Kotest ###
+kotestVersion=5.7.2
+kotestExtensionSpringVersion=1.1.3
