feat: GallerService가 Gallery 도메인이 아닌 GalleryResponse dto를 반환하도록 수정한다

--- a/gallery/build.gradle
+++ b/gallery/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
     implementation project(":core:data")
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
     testRuntimeOnly "com.h2database:h2"
 }
